tests/cve/cve_2020_36470_1.stderr
error[E0277]: `*mut ()` cannot be sent between threads safely
   --> tests/cve/cve_2020_36470_1.rs:34:18
    |
34  |     let handle = thread::spawn(move || {
    |                  ^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
    |
    = help: within `NonSend`, the trait `Send` is not implemented for `*mut ()`
    = note: required because it appears within the type `PhantomData<*mut ()>`
note: required because it appears within the type `NonSend`
   --> tests/cve/cve_2020_36470_1.rs:8:8
    |
8   | struct NonSend {
    |        ^^^^^^^
    = note: required because of the requirements on the impl of `Send` for `RingBuffer<NonSend>`
    = note: required because it appears within the type `[closure@$DIR/tests/cve/cve_2020_36470_1.rs:34:32: 36:6]`
note: required by a bound in `std::thread::spawn`
